--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 :root {
     --cor-primaria: #000000;
     --cor-secundaria: #F6F6F6;
-    --cor-terciaria: #22D4FD;
+    --cor-terciaria: #34fd22;
     --cor-hover: #272727;
 
     --fonte-primaria: 'Krona One', sans-serif;
@@ -48,7 +48,7 @@ body{
 }
 
 .apresentacao__conteudo__titulo{
-    font-size: 2.25rem;
+    font-size: 1.80rem;
     font-family: var(--fonte-primaria);
 }
 .titulo-destaque{
@@ -69,7 +69,7 @@ body{
 .apresentacao__links__subtitulo{
     font-family: var(--fonte-primaria);
     font-weight: 400;
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 .apresentacao__links__navegacao{
     display: flex;
@@ -86,7 +86,7 @@ body{
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
 }
-.apresentacao__links__link:hover{
+.apresentacao__links__navegacao:link:hover{
     background-color: var(--cor-hover);
 }
 
@@ -115,7 +115,7 @@ body{
 
     .apresentacao{
         flex-direction: column-reverse;
-        padding: ;
+        padding: 50%;
     }
     .apresentacao__conteudo{
         width: auto;
